--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
 
       <h2>2. Who Can Use This App</h2>
       <p>
-        Access to the app is restricted to authenticated users only. Users are required to sign up and log in using
-        email and password authentication. Each user can access only their own data. Anonymous access to the application
+        Access to the app is restricted to authenticated users only. The app is intended for business users managing their own 
+        subscription data, and accounts are created by users through the sign-up process. Users are required to sign up and log 
+        in using email and password authentication. Each user can access only their own data. Anonymous access to the application
         is not permitted.
       </p>
 
