--- a/index.html
+++ b/index.html
@@ -5,243 +5,143 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Privacy Policy - Subscription Manager</title>
   <style>
-    :root{
-      --bg:#f6f7fb;
-      --card:#ffffff;
-      --text:#111827;
-      --muted:#6b7280;
-      --border:#e5e7eb;
-      --purple:#4f46e5;
-      --purple2:#4338ca;
+    :root { color-scheme: light dark; }
+    body {
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
     }
-    *{ box-sizing:border-box; }
-    body{
-      margin:0;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
-      background: var(--bg);
-      color: var(--text);
-      line-height: 1.75;
+    .container {
+      max-width: 920px;
+      margin: 0 auto;
+      padding: 24px 16px 48px;
     }
-    .page{
-      min-height:100vh;
-      padding: 28px 16px 60px;
-      display:flex;
-      justify-content:center;
-      align-items:flex-start;
+    header {
+      margin-bottom: 18px;
+      padding-bottom: 14px;
+      border-bottom: 1px solid rgba(128,128,128,.35);
     }
-    .card{
-      width: min(980px, 100%);
-      background: var(--card);
-      border: 1px solid var(--border);
-      border-radius: 10px;
-      padding: clamp(22px, 3vw, 44px);
-      box-shadow: 0 10px 30px rgba(17,24,39,.06);
+    h1 { font-size: 1.9rem; margin: 0 0 8px; }
+    .updated { margin: 0; opacity: .8; }
+    h2 {
+      font-size: 1.2rem;
+      margin: 22px 0 8px;
     }
-    h1{
-      margin: 0 0 6px 0;
-      font-size: clamp(28px, 3vw, 40px);
-      color: var(--purple);
-      font-weight: 800;
-      letter-spacing: .2px;
-    }
-    .updated{
-      margin: 0 0 26px 0;
-      color: var(--muted);
-      font-size: 14px;
-    }
-    h2{
-      margin: 26px 0 10px 0;
-      font-size: clamp(18px, 2.2vw, 26px);
-      color: var(--purple2);
-      font-weight: 800;
-    }
-    h3{
-      margin: 14px 0 6px 0;
-      font-size: 16px;
-      color: var(--text);
+    p { margin: 0 0 12px; }
+    .section { margin-top: 12px; }
+    .subhead {
       font-weight: 700;
+      margin-top: 10px;
+      margin-bottom: 6px;
     }
-    p{
-      margin: 10px 0;
-      font-size: 15.5px;
+    code {
+      padding: 0 6px;
+      border-radius: 6px;
+      background: rgba(128,128,128,.18);
     }
-    hr{
-      border:0;
-      border-top:1px solid var(--border);
-      margin: 22px 0;
-    }
-    a{ color: var(--purple2); text-decoration: none; }
-    a:hover{ text-decoration: underline; }
-    .footer{
-      margin-top: 24px;
-      color: var(--muted);
-      font-size: 13px;
-      border-top: 1px solid var(--border);
-      padding-top: 16px;
+    footer {
+      margin-top: 28px;
+      padding-top: 14px;
+      border-top: 1px solid rgba(128,128,128,.35);
+      opacity: .85;
     }
   </style>
 </head>
-
 <body>
-  <div class="page">
-    <main class="card" role="main">
+  <main class="container">
+    <header>
       <h1>Privacy Policy</h1>
-      <p class="updated">Last updated: 4 January 2026</p>
+      <p class="updated"><strong>Last updated:</strong> 5 January 2026</p>
+    </header>
 
+    <section class="section" id="introduction">
       <h2>1. Introduction</h2>
-      <p>
-        Subscription Manager (“we”, “our”, or “the app”) is a mobile application built for businesses to record, manage,
-        and monitor subscription sales and customer data. This Privacy Policy describes what information we collect,
-        why we collect it, how the information is used and protected, and what permissions the application requires.
-        By accessing or using this application, you agree to the practices described in this Privacy Policy.
-      </p>
+      <p>Subscription Manager (“we”, “our”, or “the app”) is a mobile application built for business users to record, manage, and monitor subscription sales and customer data.</p>
+      <p>This Privacy Policy explains what information we collect, why we collect it, how it is used and protected, and what permissions the application requires. By accessing or using this application, you agree to the practices described in this policy.</p>
+    </section>
 
-      <hr />
-
+    <section class="section" id="who-can-use">
       <h2>2. Who Can Use This App</h2>
-      <p>
-        Access to the app is restricted to authenticated users only. The app is intended for business users managing their own 
-        subscription data, and accounts are created by users through the sign-up process. Users are required to sign up and log 
-        in using email and password authentication. Each user can access only their own data. Anonymous access to the application
-        is not permitted.
-      </p>
+      <p>Access to the application is restricted to authenticated users only. Users must sign up and log in using email and password authentication. Each user can access only their own data. Anonymous access to the application is not permitted.</p>
+    </section>
 
-      <hr />
-
+    <section class="section" id="purpose">
       <h2>3. Purpose of the Application</h2>
-      <p>
-        The purpose of the application is to enable authorized users to record and manage subscription-based business
-        data. The app allows users to record monthly or yearly subscription sales, automatically calculate subscription
-        expiry dates, track active and expired subscriptions, search customers using email addresses or phone numbers,
-        and view purchase and activity history. Users can also soft-delete and restore subscription records, export
-        business data such as users, purchases, and extra emails via email.
-      </p>
+      <p>The application enables authorized users to record and manage subscription-based business data. It allows users to record monthly or yearly subscription sales, automatically calculate subscription expiry dates, track active and expired subscriptions, search customers using email addresses or phone numbers, and view purchase and activity history.</p>
+      <p>Users can also soft-delete and restore subscription records and export business data (such as purchase records) via email.</p>
+    </section>
 
-      <hr />
-
+    <section class="section" id="information-we-collect">
       <h2>4. Information We Collect</h2>
 
-      <h3>Account and Authentication Information</h3>
-      <p>
-        We collect certain account-related information through Firebase Authentication. This includes the user’s email
-        address and a unique user identifier (UID). This information is used solely for login and authentication
-        purposes, enforcing user-level data access, validating export requests, and enabling role-based access control
-        such as admin and standard user permissions.
-      </p>
+      <p class="subhead">Account and Authentication Information</p>
+      <p>We collect certain account-related information through Firebase Authentication, including the user’s email address, optional display name, role (standard user), and a unique user identifier (UID). This information is used for login, authentication, enforcing user-level data access, and validating export requests.</p>
 
-      <h3>Subscription and Customer Data</h3>
-      <p>
-        When a user adds a subscription record, the application may store customer-related information including the
-        customer’s email address, phone number with country code, selected subscription plan (monthly or yearly), amount
-        paid, purchase date, and the subscription expiry date calculated by the app. All such data is entered manually
-        by the user and is used strictly for subscription tracking and internal business management.
-      </p>
+      <p class="subhead">Subscription and Customer Data</p>
+      <p>When a user adds subscription records, the application may store customer-related information such as customer email address, phone number with country code, subscription plan (monthly or yearly), amount paid, purchase date, and the calculated subscription expiry date.</p>
+      <p>Each record also includes owner metadata (ownerId and ownerEmail) and audit fields (createdAt, isDeleted, deletedAt, deletedBy) to enforce access control and support recovery. All such data is entered manually by the user and is used strictly for subscription tracking and business management.</p>
 
-      <h3>Extra Email Addresses</h3>
-      <p>
-        Users may optionally store additional email addresses within the app for business reports. The system prevents
-        duplicate email entries at the data level to maintain accuracy and consistency.
-      </p>
+      <p class="subhead">Export and Audit Metadata</p>
+      <p>When a user requests a data export, the application stores metadata related to the request, including request ID, owner details, requested email address, export type, export status, timestamps, timezone, total number of records included, file paths for generated export files, and any error messages generated during processing.</p>
+    </section>
 
-      <h3>Export and Audit Metadata</h3>
-      <p>
-        When a user requests a data export, the app stores metadata related to that request. This includes the requested
-        email address, the type of export (users, purchases, or extra emails), the export status, timestamps related to
-        the request lifecycle, the total number of records included, and any error messages generated during processing.
-      </p>
-
-      <hr />
-
+    <section class="section" id="how-we-use-data">
       <h2>5. How We Use the Data</h2>
-      <p>
-        All collected information is used strictly to operate and improve the core functionality of the application.
-        This includes displaying subscription data within the app, calculating subscription status, enabling searching,
-        filtering, and analytics, generating and delivering export files via email, restoring recently deleted records,
-        and maintaining audit logs for export activity. We do not sell, rent, share, or use any data for advertising,
-        profiling, or marketing purposes.
-      </p>
+      <p>All collected information is used strictly to operate and improve the core functionality of the application. This includes displaying subscription data, calculating subscription status, enabling search and filtering, generating and delivering export files via email, restoring deleted records, and maintaining audit logs.</p>
+      <p>We do not sell, rent, share, or use any data for advertising, profiling, or marketing purposes.</p>
+    </section>
 
-      <hr />
-
+    <section class="section" id="storage-security">
       <h2>6. Data Storage and Security</h2>
-      <p>
-        All data is stored securely using Firebase services. Authentication is handled through Firebase Authentication,
-        and application data is stored in Firebase Firestore with owner-based access rules to ensure data isolation.
-        Export files are generated using secure Cloud Functions, stored privately, and delivered only via email. Direct
-        client access to export files is blocked.
-      </p>
-      <p>
-        Subscription records that are soft-deleted are marked as deleted and hidden from primary views. These records
-        are retained for up to 30 days, during which they can be restored. After this retention period, the records are
-        permanently deleted.
-      </p>
+      <p>All data is stored securely using Firebase services. Authentication is handled through Firebase Authentication, and application data is stored in Firebase Firestore with owner-based access rules to ensure data isolation.</p>
+      <p>Export files are generated using secure Cloud Functions, stored privately in Firebase Storage under paths such as <code>exports/{requestId}/</code>, and sent only to the authenticated user’s registered email address. These files are not accessible by other users, and direct client access is blocked by storage rules.</p>
+      <p>Soft-deleted subscription records are retained for up to 30 days, during which they can be restored. After this period, cleanup routines permanently delete the data.</p>
+    </section>
 
-      <hr />
-
+    <section class="section" id="permissions">
       <h2>7. App Permissions</h2>
-      <p>
-        The application does not request access to sensitive device permissions such as the camera, microphone,
-        location, contacts, SMS, call logs, or file and media storage. The only required permission is internet access,
-        which is necessary for authentication, data synchronization, and export generation and delivery.
-      </p>
+      <p>The application does not request access to sensitive device permissions such as camera, microphone, location, contacts, SMS, call logs, or file and media storage. The only required permission is internet access, which is necessary for authentication, data synchronization, and export delivery.</p>
+    </section>
 
-      <hr />
-
+    <section class="section" id="third-party">
       <h2>8. Third-Party Services</h2>
-      <p>
-        Subscription Manager uses trusted third-party services to provide core functionality. These include Firebase for
-        authentication, database storage, cloud functions, and secure file handling, as well as SendGrid for delivering
-        export files via email. These services process data only to the extent required to perform their intended
-        functions.
-      </p>
+      <p>The application does not use third-party analytics, advertising SDKs, or tracking technologies for user profiling, behavioral tracking, or marketing purposes.</p>
+      <p>Backend logging or monitoring is limited strictly to operational needs such as security, error detection, and service reliability. Trusted third-party services used include Firebase for authentication, database storage, cloud functions, and secure file handling, and SendGrid for delivering export files via email. These services process data only to the extent required to perform their intended functions.</p>
+    </section>
 
-      <hr />
-
+    <section class="section" id="retention">
       <h2>9. Data Retention</h2>
-      <p>
-        Active data is retained until it is deleted by the user. Soft-deleted data is retained for a period of 30 days
-        before being permanently removed. Export-related records are retained only for audit purposes and delivery
-        tracking.
-      </p>
+      <p>Active data is retained until deleted by the user. Soft-deleted data is retained for 30 days before permanent removal. Export-related records are retained only for audit purposes and delivery tracking.</p>
+    </section>
 
-      <hr />
-
+    <section class="section" id="children">
       <h2>10. Children’s Privacy</h2>
-      <p>
-        This application is not intended for use by children and does not target users under the age of 13.
-      </p>
+      <p>This application is not intended for use by children and does not target users under the age of 13.</p>
+    </section>
 
-      <hr />
-
+    <section class="section" id="user-responsibility">
       <h2>11. User Responsibility</h2>
-      <p>
-        Users are responsible for the accuracy and legality of the data they enter into the application. Users must
-        ensure that they have the appropriate rights and permissions to store customer information. Users can delete or
-        restore records within the app, and access to data is restricted to the user’s own records unless administrative
-        privileges are granted.
-      </p>
+      <p>Users are responsible for the accuracy and legality of the data they enter into the application. Users must ensure that they have the appropriate rights and permissions to store customer information.</p>
+      <p>Users can access, modify, export, or delete their own data at any time directly within the application. The app acts solely as a data processor for business data entered by users and does not independently collect, verify, or source customer information. Users are solely responsible for ensuring lawful collection, use, and storage of any customer data entered into the application, including obtaining any required consent under applicable data protection laws.</p>
+    </section>
 
-      <hr />
-
+    <section class="section" id="changes">
       <h2>12. Changes to This Policy</h2>
-      <p>
-        We may update this Privacy Policy from time to time. Any changes will be reflected by updating the “Last updated”
-        date at the top of this page.
-      </p>
+      <p>This Privacy Policy may be updated from time to time. Any changes will be reflected by updating the “Last updated” date at the top of this page.</p>
+    </section>
 
-      <hr />
-
+    <section class="section" id="contact">
       <h2>13. Contact Information</h2>
-      <p>
-        If you have any questions regarding this Privacy Policy or how data is handled, please contact us at:
+      <p>If you have any questions regarding this Privacy Policy or how data is handled, please contact us:</p>
+      <p><strong>Email:</strong> <a href="mailto:dnishu970@gmail.com">dnishu970@gmail.com</a><br />
+         <strong>App Name:</strong> Subscription Manager
       </p>
-      <p>
-        <strong>Email:</strong> <a href="mailto:dnishu970@gmail.com">dnishu970@gmail.com</a><br />
-        <strong>App Name:</strong> Subscription Manager
-      </p>
+    </section>
 
-      <p class="footer">© 2026 Subscription Manager. All rights reserved.</p>
-    </main>
-  </div>
+    <footer>
+      <p>© 2026 Subscription Manager. All rights reserved.</p>
+    </footer>
+  </main>
 </body>
 </html>
