--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
     <section class="section" id="user-responsibility">
       <h2>11. User Responsibility</h2>
       <p>Users are responsible for the accuracy and legality of the data they enter into the application. Users must ensure that they have the appropriate rights and permissions to store customer information.</p>
-      <p>Users can access, modify, export, or delete their own data at any time directly within the application. The app acts solely as a data processor for business data entered by users and does not independently collect, verify, or source customer information. Users are solely responsible for ensuring lawful collection, use, and storage of any customer data entered into the application, including obtaining any required consent under applicable data protection laws.</p>
+      <p>Users can access, modify, export, or delete their own data at any time directly within the application. The app acts solely as a data processor for business data entered by users and does not independently collect, verify, or source customer information. Users are solely responsible for ensuring lawful collection, use, and storage of any customer data entered into the application, including obtaining any required consent under applicable data protection laws. Users may also request deletion of their account and associated data by contacting us at the email address listed below.</p>
+      <p><strong>Email:</strong> <a href="mailto:dnishu970@gmail.com">dnishu970@gmail.com</a><br />
     </section>
 
     <section class="section" id="changes">
