--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <section class="section" id="who-can-use">
       <h2>2. Who Can Use This App</h2>
-      <p>Access to the application is restricted to authenticated users only. Users must sign up and log in using email and password authentication. Each user can access only their own data. Anonymous access to the application is not permitted.</p>
+      <p>To access the application, users must sign up and log in using an email address and password. Each user can access only their own data. Anonymous access to the application is not permitted.</p>
     </section>
 
     <section class="section" id="purpose">
